...

    <!-- Login notification -->
    <string name="x_location">Location permission is required to use the full functionality.</string>
    <string name="alert">Alert</string>
    <string name="login_fail">Wrong Email or Password</string>
    <string name="close">Close</string>
    <string name="U_empty">Username should not be empty</string>
    <string name="notice">Notice</string>
    <string name="Register_successful">Register successful!</string>
    <string name="x_email">Not a valid email</string>
    <string name="xx_email">You have registered already with this email</string>
    <string name="c_email">Please check your email again</string>
    <string name="c_pwd">Please check your password again</string>
    <string name="n_email">Email should not be empty</string>
    <string name="n_pwd">Password should be longer than 5</string>
    <string name="location_error">Can not get current location</string>

    <!-- Deadline -->
    <string name="text_calender">Calender</string>
    <string name="text_todo">To Do List</string>

...
    <!-- search page -->
    <string name="search">Search</string>
    <string name="search_cno">Cno</string>
    <string name="search_date">date</string>
    <string name="search_sort_by">Sort by:</string>
    <string name="title_search_navigation" translatable="false">SearchActivity</string>
    <string name="no_course_found">No course found</string>

    <!-- nav page -->
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
...
